
2024-03-30:	refactored a pissload of code so that all the main reading/writing heatmap data stuff is inside HeatmapNew and HeatmapImage (and not WorldHeatmapPlugin) so that they can be tested /debugged/profiled with some standalone test program rather than only being able to be run in runelite.

**UPDATE RELEASED**

2024-04-01:	Updated map to include Varlamore

2024-04-03:	I wonder if it's possible to just use runelite's MapImageDumper directly from the plugin instead of using my HeatmapImage class, so that the world map is always up to date? Perhaps I can override its methods or something to add the heatmap visualization.
	result: Just remembered that MapImageDumper uses a somewhat broken version of BigBufferedImage which creates big ass temp files that never get deleted, so it shouldn't be used in a plugin.

2024-04-03:	Changed default speed-memory tradeoff from 4 to 6

2024-12-07: Added int field to HeatmapNew: AccountType

2024-12-07: Added int field to HeatmapNew: CurrentCombatLevel

2024-12-07: Changed image output filenames for better sorting (now the name comes before the date)

----You are Here----

TODO: Make it periodically upload files to https://www.osrsworldheatmap.com/api/upload-csv/ with opt-out (or opt-in?)
    NOTE: Add "warning=This plugin uploads anonymous data blah blah" to plugin-hub file

TODO: Make it so the % done label returns to normal when an exception is thrown whilst writing image

TODO: Fix how if you're writing an image, the label will correctly say "Writing ... X%", but opening the config and then returning to the panel will cause the default "Write Heatmap Image" text to be drawn until the label is updated again for the next percentage. Also, the label is undisabled when this happens (the text remains green, though.)

TODO: See if there's any reason why that guy's heatmaps were resetting
    NOTE: Maybe I should see if there's anything interesting about the time since his last save file when it reset